Implementado a execução do servidor Go-Data como serviço do windows, linux e mac

--- a/examples/advanced/.env
+++ b/examples/advanced/.env
@@ -1,14 +1,19 @@
-﻿# Configurações do Banco de Dados MySQL
-DB_DRIVER=mysql
+﻿# Configurações do Banco de Dados
+DB_DRIVER=postgresql
 DB_HOST=localhost
-DB_PORT=3306
-DB_NAME=testdb
-DB_USER=testuser
-DB_PASSWORD=testpass
+DB_NAME=godata_basic_example
+DB_PORT=5432
+DB_USER=postgres
+DB_PASSWORD=postgres
 DB_SCHEMA=public
-DB_MAX_OPEN_CONNS=50
-DB_MAX_IDLE_CONNS=10
-DB_CONN_MAX_LIFETIME=5m
+DB_MAX_OPEN_CONNS=25
+DB_MAX_IDLE_CONNS=5
+DB_CONN_MAX_LIFETIME=600s
+
+# Configurações do Serviço
+SERVICE_NAME=godata-advanced
+SERVICE_DISPLAY_NAME=GoData Advanced Production
+SERVICE_DESCRIPTION=Exemplo avançado do GoData OData v4 com configurações de produção e otimizações
 
 # Configurações do Servidor OData (Produção)
 SERVER_HOST=0.0.0.0
@@ -27,7 +32,8 @@ SERVER_ENABLE_COMPRESSION=true
 SERVER_MAX_REQUEST_SIZE=52428800
 SERVER_SHUTDOWN_TIMEOUT=60s
 
-# Configurações TLS/SSL
+# Configurações de SSL/TLS (opcional)
+SERVER_ENABLE_TLS=true
 SERVER_TLS_CERT_FILE=server.crt
 SERVER_TLS_KEY_FILE=server.key
 
@@ -39,3 +45,16 @@ JWT_EXPIRES_IN=2h
 JWT_REFRESH_IN=48h
 JWT_ALGORITHM=HS256
 JWT_REQUIRE_AUTH=false
+
+# Configurações Multi-Tenant (desabilitado no exemplo básico)
+MULTI_TENANT_ENABLED=false
+TENANT_IDENTIFICATION_MODE=header
+TENANT_HEADER_NAME=X-Tenant-ID
+DEFAULT_TENANT=default 
+
+# Configurações de Autenticação
+AUTH_ROUTES_ENABLED=true
+AUTH_LOGIN_ROUTE=/auth/login
+AUTH_REFRESH_ROUTE=/auth/refresh
+AUTH_LOGOUT_ROUTE=/auth/logout
+AUTH_ME_ROUTE=/auth/me
