--- a/examples/events/.env
+++ b/examples/events/.env
@@ -10,6 +10,11 @@ DB_MAX_OPEN_CONNECTIONS=10
 DB_MAX_IDLE_CONNECTIONS=5
 DB_CONNECTION_MAX_LIFETIME=3600
 
+# Configurações do Serviço
+SERVICE_NAME=godata-events
+SERVICE_DISPLAY_NAME=GoData Events Example
+SERVICE_DESCRIPTION=Exemplo do GoData OData v4 com sistema completo de eventos de entidade
+
 # Configurações do Servidor OData
 SERVER_HOST=localhost
 SERVER_PORT=8080
@@ -32,3 +37,16 @@ JWT_EXPIRES_IN=3600
 JWT_REFRESH_IN=86400
 JWT_ALGORITHM=HS256
 JWT_REQUIRE_AUTH=false
+
+# Configurações Multi-Tenant (desabilitado no exemplo events)
+MULTI_TENANT_ENABLED=false
+TENANT_IDENTIFICATION_MODE=header
+TENANT_HEADER_NAME=X-Tenant-ID
+DEFAULT_TENANT=default 
+
+# Configurações de Autenticação
+AUTH_ROUTES_ENABLED=true
+AUTH_LOGIN_ROUTE=/auth/login
+AUTH_REFRESH_ROUTE=/auth/refresh
+AUTH_LOGOUT_ROUTE=/auth/logout
+AUTH_ME_ROUTE=/auth/me
