--- a/examples/jwt/.env
+++ b/examples/jwt/.env
@@ -10,6 +10,11 @@ DB_MAX_OPEN_CONNECTIONS=10
 DB_MAX_IDLE_CONNECTIONS=5
 DB_CONNECTION_MAX_LIFETIME=3600
 
+# Configurações do Serviço
+SERVICE_NAME=godata-jwt
+SERVICE_DISPLAY_NAME=GoData JWT Authentication Example
+SERVICE_DESCRIPTION=Exemplo do GoData OData v4 com autenticação JWT e controle de acesso
+
 # Configurações do Servidor OData
 SERVER_HOST=localhost
 SERVER_PORT=8080
