--- a/examples/multi_tenant/.env
+++ b/examples/multi_tenant/.env
@@ -48,3 +48,16 @@ JWT_ENABLED=false
 JWT_SECRET_KEY=sua-chave-secreta-aqui
 JWT_ISSUER=go-data-multitenant
 JWT_EXPIRES_IN=1h
+
+# Configurações Multi-Tenant (habilitado)
+MULTI_TENANT_ENABLED=true
+TENANT_IDENTIFICATION_MODE=header
+TENANT_HEADER_NAME=X-Tenant-ID
+DEFAULT_TENANT=default
+
+# Configurações de Autenticação
+AUTH_ROUTES_ENABLED=true
+AUTH_LOGIN_ROUTE=/auth/login
+AUTH_REFRESH_ROUTE=/auth/refresh
+AUTH_LOGOUT_ROUTE=/auth/logout
+AUTH_ME_ROUTE=/auth/me
